<resources>
    <string name="app_name">简约记账</string>
    <string name="editone">记一笔...</string>
    <string name="month_out">本月支出</string>
    <string name="month_in">本月收入</string>
    <string name="budget">预算剩余</string>
    <string name="seeexcel">查看图表分析</string>
    <string name="add_remark">添加备注</string>
    <string name="remark">备注</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="history_record">账单记录</string>
    <string name="account_info">账单详情</string>
    <string name="please_input_time">请输入时间</string>
    <string name="set_budget">设置预算</string>
    <string name="please_search_info">请输入搜索信息</string>
    <string name="date_empty">数据为空，无此类记录~~</string>

    <string name="about_appinfo">应用信息</string>
    <string name="about_version">版本</string>
    <string name="about_1">1.0</string>
    <string name="about_app">关于应用</string>
    <string name="about_balabala">本项目即开发了一个记账app，用于日常记账</string>
    <string name="about_developer">开发者</string>
    <string name="about_me">关于我</string>
    <string name="about_loc">坐标广州，Android程序员</string>
    <string name="about_email">发送邮箱</string>
    <string name="about_email2">我的邮箱是：1076806004@qq.com,有问题可以找我！</string>

    <string name="out">支出</string>
    <string name="in">收入</string>
    <string name="history_info">本月账单记录</string>
    <string name="clear_all">清空所有记录</string>
    <string name="char_info">账单详情</string>

    <string name="not_data">暂无数据~~</string>
</resources>