<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_time_dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_input_time"
        android:padding="10dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">
        <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="2"
            android:id="@+id/dialog_time_et_hour" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textStyle="bold" />

        <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="2"
            android:id="@+id/dialog_time_et_minute" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal">

        <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_time_btn_cancel"
            android:text="@string/cancel"
            android:background="@null"
            android:textColor="@color/green_006400"
            android:layout_marginRight="20dp" />
        <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/dialog_time_btn_ensure"
            android:text="@string/ensure"
            android:background="@null"
            android:textColor="@color/green_006400"
            android:layout_marginRight="20dp" />
    </LinearLayout>

</LinearLayout>