<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/grey_f3f3f3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/it_back"
            android:id="@+id/char_iv_back"
            android:layout_marginLeft="10dp"
            android:onClick="onClick" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/char_info"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_centerInParent="true" />
        <ImageView
            android:id="@+id/char_iv_rili"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:onClick="onClick"
            android:src="@mipmap/it_rili" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/char_tv_date"
            android:text="2020年11月账单"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/char_tv_out"
            android:text="共1笔支出，￥23.0元"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="14sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/char_tv_in"
            android:text="共2笔收入，￥113.0元"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="14sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:id="@+id/char_btn_out"
            android:text="@string/out"
            android:background="@drawable/main_recordbtn_bg"
            android:textColor="@color/white"
            android:onClick="onClick"
            android:textStyle="bold"
            android:layout_marginRight="10dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:id="@+id/char_btn_in"
            android:text="@string/in"
            android:background="@drawable/dialog_btn_bg"
            android:textColor="@color/black"
            android:onClick="onClick"
            android:textStyle="bold"
            android:layout_marginRight="10dp" />
    </LinearLayout>
    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/char_vp" />

</LinearLayout>